MODINV-1410: Imported MARC Bib with 999ff (using "Modify action") is incorrectly linked to Instance